--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-formidable": "^1.2.0",
     "express-session": "^1.18.0",
+    "firebase": "^10.13.0",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.5.2",
