--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@adminjs/express": "^6.1.0",
     "@adminjs/mongoose": "^4.1.0",
     "@carbon/icons-react": "^11.46.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "admin-bro": "^4.0.1",
     "adminjs": "^7.8.8",
     "bcryptjs": "^2.4.3",
