--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "admin-bro": "^4.0.1",
     "adminjs": "^7.8.8",
+    "axios": "^1.7.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.4.0",
@@ -35,6 +36,7 @@
     "express-session": "^1.18.0",
     "firebase": "^10.13.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.5.2",
     "multer": "^1.4.3",
