--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^8.5.2",
     "multer": "^1.4.3",
     "nodemailer": "^6.9.14",
+    "path": "^0.12.7",
     "tslib": "^2.6.3"
   },
   "devDependencies": {
