--- a/server/package.json
+++ b/server/package.json
@@ -26,8 +26,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.4.0",
+    "config": "^3.3.12",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dateformat": "^5.0.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -42,6 +44,7 @@
     "multer": "^1.4.3",
     "nodemailer": "^6.9.14",
     "path": "^0.12.7",
+    "qs": "^6.13.0",
     "tslib": "^2.6.3"
   },
   "devDependencies": {
