--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "multer": "^1.4.3",
     "nodemailer": "^6.9.14",
     "path": "^0.12.7",
+    "pdfkit": "^0.15.0",
     "qs": "^6.13.0",
     "tslib": "^2.6.3"
   },
